tests/17-enums-struct-variant-incomplete.stderr
error[E0063]: missing field `b` in initializer of `Foo`
 --> $DIR/17-enums-struct-variant-incomplete.rs:4:9
  |
4 | #[def = "A { a: 10 }"]
  |         ^^^^^^^^^^^^^ missing `b`
